Moon / Planet:  - That was an issue on mobile version, that if you pushed a lot of time the part of the moon for the motorOn, a message of the desktop ask u about the image (open, download).. and that paused the game unnecesary. This is because the moon was an <img>  - Now the image of the moon is not an <img>, is a background of the div, so will be no detected like that, and will not produce bad experiences for the user  - Now the image will be not deformed in the width of the screen, will only ocupp the necesary size
PAUSE / PLAY 
 - It was an issue when the pause button is pushed 24/7, because the animations start going in queue. Now the animation is stoped after do a new one, solving that issue

--- a/Lunar Lander Teamwork/web/css/game.css
+++ b/Lunar Lander Teamwork/web/css/game.css
@@ -35,6 +35,10 @@ body {
     background: whitesmoke !important;
 }
 
+nav-tabs li a {
+    width: 12px !important;
+}
+
 #set_scores, #set_players, #set_instructions, #set_about, #set_ranking{
     display: none;
 }
@@ -72,11 +76,10 @@ a {
     height: 10%;
     width:100%;
     bottom:0;
-}
-
-#moon {
-    height: 100%;
-    width: 100%;
+    background-image: url(../img/moon1.png);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position:center 0%;
 }
 
 #rocket{
@@ -292,7 +295,7 @@ VERTICAL
         font-size: 3.5vw;
         width: 28% !important;
     }
-    
+
     .butonsSaveConfig button{
         font-size: 3.7vw;
         width: 33% !important;
